Bug 432521 - Cannot move on wayland
Summary: Cannot move on wayland
Status: RESOLVED FIXED
Alias: None
Product: kruler
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Neon Linux
: NOR major
Target Milestone: ---
Assignee: Mathias Soeken
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-02-05 02:48 UTC by Bernhard
Modified: 2022-08-26 06:25 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Bernhard 2021-02-05 02:48:58 UTC
SUMMARY
KRuler does not move when dragging the ruler while inside a Wayland session. Using Alt/Meta kwin shortcut for dragging winows obviously still works.

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.21.80
KDE Frameworks Version: 5.79.0
Qt Version: 5.15.2
Kernel Version: 5.11.0-051100rc6-generic (64-bit)
Graphics Platform: Wayland
Processors: 8 × AMD Ryzen 7 4700U with Radeon Graphics
Memory: 15,1 GiB of RAM
Graphics Processor: AMD RENOIR
Comment 1 Bernhard 2021-02-05 03:09:42 UTC
The context menu is also permanently stuck to the top left corner of my screen, and the window can be tiled by either dragging it to a screen edge or using keyboard shortcuts.
Comment 2 Mads 2021-03-08 10:17:00 UTC
Any news on this? I experience the same thing with e.g. Audacious, I can't move the window without holding the Super key.
Comment 3 Bernhard 2021-03-08 10:22:12 UTC
(In reply to Mads from comment #2)
> Any news on this? I experience the same thing with e.g. Audacious, I can't
> move the window without holding the Super key.

I am pretty sure this has to be fixed on a per-application-basis. You should probably report this on their bug tracker as well.
Comment 4 indecisiveautomator 2021-10-27 16:47:11 UTC
Still an issue on Plasma 5.23.2 :(

Operating System: Arch Linux
Kernel: 5.14-14-arch1-1 (64bit)
KDE Plasma Version: 5.23.2
KDE Frameworks Version: 5.87.0
Qt Version: 5.15.2

Tested on identical hardware to OP (4700U Renoir with 16GB RAM).
Comment 5 shenlebantongying 2021-11-24 02:09:00 UTC
If run from terminal, it will show:
```
This plugin supports grabbing the mouse only for popup windows
```
Comment 6 Carl Schwan 2022-08-26 06:25:48 UTC
Git commit d74e52553d54b7ec84207cebf82358d3309698ac by Carl Schwan.
Committed on 26/08/2022 at 06:05.
Pushed by carlschwan into branch 'master'.

Support wayland
Signed-off-by: Carl Schwan <carl@carlschwan.eu>

M  +16   -7    klineal.cpp

https://invent.kde.org/graphics/kruler/commit/d74e52553d54b7ec84207cebf82358d3309698ac