Support wayland

BUG: 432521
Signed-off-by: Carl Schwan <carl@carlschwan.eu>